--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
     body,
     input {
       background: #222;
-      color: #ccc;
+      color: blue;
     }
   }
 </style>
 
 <h1>Tic Tac Toe</h1>
+<h2>By Pablo Caicedo</h2>
+<h3>February 2024</h3>
 
 <table>
   <tr>
