--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   // The user chose a box, check for win, robot turn, check for win
   function handleClickInput(evt) {
-    evt.target.closest('td').innerHTML = HUMAN
+    evt.target.closest('td').innerHTML = ROBOT
     if (hasWin()) {
       return endGame()
     }
