--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <title>Checkers Nadia Lab 5</title>
+
+<!--Hello world! This a comment in the top of the file-->
 <meta charset="UTF-8" />
 
 <style>
