--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
+    <td><input type="checkbox" /></td>
   </tr>
   <tr>
     <td><input type="checkbox" /></td>
