Added new message in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h1>Tic Tac Toe</h1>
 <h2>By Pablo Caicedo</h2>
 <h3>February 2024</h3>
-
+<p>John new exciting edit!</p>
 <table>
   <tr>
     <td><input type="checkbox" /></td>
