--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
+// making changes
 <title>Checkers Nadia Lab 5</title>
-
 <!--Hello world! This a comment in the top of the file-->
 <meta charset="UTF-8" />
 
